add a js alert project

--- a/example3-selectores.html
+++ b/example3-selectores.html
@@ -30,7 +30,7 @@
     <button id="btn4">text remover</button>
     </center>
 </body>
-<script type="text/javascript" src="./base/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript">
    $(function() {
           $("#btn1").click(function() {
