--- a/example2-jqalert.html
+++ b/example2-jqalert.html
@@ -9,7 +9,7 @@
     </div>
     </center>
 </body>
-<script type="text/javascript" src="./base/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script type="text/javascript">
    $("document").ready(function() {
           alert("page is loaded");                     
